refactor : rest API return 타입 변경